# any

./: CMakeLists.txt  README.md
any/: CMakeLists.txt
any/Include/: any.h
any/Include/detail/: any_helpers.h  value_container.h
any/Source/: any.cpp
any_performance_test/: CMakeLists.txt
any_performance_test/Source/: main.cpp
any_performance_test/Source/PerformanceTester/: PerformanceTester.cpp  PerformanceTester.h
